Include page updated date when processing CIA HTML

--- a/output/bn.html
+++ b/output/bn.html
@@ -1,4 +1,6 @@
 
+<p>Page last updated on January 28, 2014</p>
+
 
 <div class="stats-section" style="overflow: hidden">
 <div class="sa-light neat_row" style="overflow: hidden">
